# airbnb-clone-django

./: README.md  build.sh  codeChallenge.md  pyproject.toml  render.yaml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py  0003_alter_booking_experience_time.py  0004_booking_experience_end_booking_experience_start.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py  permissions.py
config/: authentication.py  schema.py  settings.py  urls.py
direct_messages/: apps.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_message_room_alter_message_user.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_alter_experiences_options_experiences_category_and_more.py  0003_alter_experiences_category_alter_experiences_host.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pets_allowed.py
medias/: admin.py  models.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_file_and_more.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: Original_views.py  Untitled-1.json  admin.py  models.py  mutations.py  queries.py  schema.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0004_room_category.py  (+1 more)
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: models.py  serializers.py  urls.py  views.py
(+7 files in other folders)
